# GoIT_ALL_Homework

./: README.md  pyproject.toml
CORE/HW06/: normalize.py
CORE/HW5/: run.py
CORE/HW6/: alembic.ini  generation_data.py  main.py  main_menu.py  pyproject.toml  search_queries.py
CORE/HW6/alembic/: env.py
CORE/HW6/old_vers_hw6/: generation_data.py  main.py
WEB/HW10/CORE/HW5/: README.md  exchange_log.txt  index.html
WEB/HW10/WEB/HW7/: pyproject.toml
WEB/HW10/WEB/HW7/database/: models.py
WEB/HW10/WEB/HW7/scripts/: search_queries.py
WEB/HW10/WEB/HW8/: requirements.txt
WEB/HW10/WEB/HW8/scripts/: consumer_sms.py
WEB/HW10/WEB/HW8/test/: test.py
WEB/HW10/WEB/HW9/json/: author.json
WEB/HW11/CORE/HW5/: main.py
WEB/HW11/WEB/HW7/scripts/: manege.py
WEB/HW11/WEB/HW7/seed/: data_for_create_db.py  generation_data.py
WEB/HW11/WEB/HW8/scripts/: connect.py
WEB/HW11_new/: alembic.ini  connect.py  faker_data_db.py  main.py  models.py  pyproject.toml  requirements.txt  settings_connect.ini
WEB/HW11_new/alembic/: env.py
WEB/HW12/CORE/HW06/: main_compl.py  test.py
WEB/HW12/CORE/HW9/: cli_bot.py
WEB/HW12/WEB/HW7/: README.md  config.ini  main.py
WEB/HW12/WEB/HW7/scripts/: creat_DB.py  test_connect_db.py
WEB/HW12/WEB/HW7/test/: test.py
WEB/HW12/WEB/HW8/: pyproject.toml
WEB/HW12/WEB/HW8/scripts/: producer.py
WEB/HW12/WEB/HW9/: README.md
WEB/HW13/: connect.py  docker-compose.yml  users.py
WEB/HW13/postgres-data/base/13481/: 1247  16385  16393  16399  16401  2579  2657  2658  2662  2673  2678  2679  2703  3455  5002  pg_internal.init
WEB/HW13/postgres-data/global/: pg_control
WEB/HW13_final/: README.md
WEB/HW13_final/WEB/HW7/alembic/: env.py
WEB/HW13_final/WEB/HW7/scripts/: my_selec.py
WEB/HW13_final/WEB/HW8/: main.py
WEB/HW13_final/WEB/HW8/test/: rabbit_fake_data.py
WEB/HW13_final/WEB/HW9/: requirements.txt
WEB/HW13_final/postgres-data/base/13481/: 1247  1249  1259  16392  16393  16395  16396  16397  16398  16400  16408  16411  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
WEB/HW13_final/postgres-data/global/: pg_control  pg_internal.init
WEB/HW13_final/postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
WEB/HW14/CORE/HW5/: client.py  pyproject.toml
WEB/HW14/WEB/HW10/: README.md  pyproject.toml
WEB/HW14/WEB/HW7/database/: db.py
WEB/HW14/WEB/HW7/menu/: main_menu.py
WEB/HW14/WEB/HW7/scripts/: delate_DB.py
WEB/HW14/WEB/HW8/: config.ini
WEB/HW14/WEB/HW8/scripts/: consumer.py  search_quotes.py
WEB/HW7/: requirements.txt
WEB/HW7/test/: mydatabase.db
WEB/HW8/data/: models.py
WEB/HW8/scripts/: consumer_email.py  touch_json.py
WEB/HW9/: main.py  pyproject.toml
WEB/HW9/test/: test.py
WEB/Homework13/: .env  Dockerfile  README.md  auth.py  faker_data_db.py  main.py  models.py
WEB/Homework13/alembic/versions/: 0cfa5e8a9eb8_initial_migration_contacts.py  e80193ad7c3c_initial_migration.py
WEB/Homework13/config/: postgres_setting.ini  setting.py
WEB/Homework13/postgres-data/base/13481/: 1249  1259  16396  16397  16398  16409  16410  2224  2604  2606  2608  2610  2656  (+8 more)
WEB/Homework13/postgres-data/global/: pg_internal.init
WEB/Homework13/postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
(+1 files in other folders)
