[tool.poetry]
name = "goit-homework"
version = "0.1.0"
description = ""
authors = ["Kagev <kaplitskiygv@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_homework"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.0"
django-environ = "^0.11.2"
django = "^4.2.5"
redis = "^5.0.0"
router = "^0.1"
cloudinary = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
