[tool.poetry]
name = "homework7"
version = "0.1.0"
description = ""
authors = ["Kagev <kaplitskiygv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^19.2.0"
docker = "^6.1.3"
postgres = "^4.0"
sqlalchemy = "^2.0.19"
argparse = "^1.4.0"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
