[tool.poetry]
name = "hw9"
version = "0.1.0"
description = ""
authors = ["Kagev <kaplitskiygv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest-playwright = "^0.4.2"
scrapy = "^2.10.0"
aioredis = "^2.0.1"
redis-lru = "^0.1.2"
colorama = "^0.4.6"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
