[tool.poetry]
name = "homework8"
version = "0.1.0"
description = ""
authors = ["Kagev <kaplitskiygv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
colorama = "^0.4.6"
pymongo = {extras = ["srv", "tls"], version = "^4.4.1"}
redis = "^4.6.0"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^19.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
